<resources>
    <string name="app_name">JRTrade</string>
    <string name="image_view">Image View</string>
    <string name="image_icon">Image Icon</string>
    <string name="slogan_capital">YOUR FUTURE,\n YOUR CRYPTOCURRENCY.</string>
    <string name="slogan">Your Future,\n Your Cryptocurrency.</string>
    <string name="introduction">Learn more about Cryptocurrencies, look to the future</string>

    <string name="login_capital">LOG IN</string>
    <string name="login">Log in</string>
    <string name="signup_capital">SIGN UP</string>
    <string name="signup">Sign up</string>
    <string name="first_name">First name</string>
    <string name="first_name_enter_hint">Enter your first name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_enter_hint">Enter your last name</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_enter_hint">Enter your phone number</string>
    <string name="email">Email</string>
    <string name="email_enter_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_enter_hint">Enter your password</string>
    <string name="enter_new_password">Enter new Password:</string>
    <string name="enter_new_password_enter_hint">Enter new Password</string>
    <string name="confirm_new_password">Confirm new Password:</string>
    <string name="confirm_new_password_enter_hint">Confirm new Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="signup_recommendation">Do not have an account?\n Register now!</string>
    <string name="login_recommendation">Already have an account?\n Login here!</string>
    <string name="instruction">A reset-password-email will be sent to your email address</string>
    <string name="reset_pwd_email_option">Send a code via email</string>
    <string name="reset_pwd_phone_number_option">Send a code via SMS</string>
    <string name="confirm">Confirm</string>
    <string name="enter_email_instruction">Enter your email here:</string>
    <string name="reset_password">Reset your password:</string>
    <string name="logout">Logout</string>
    <string name="avatar">Avatar</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="balance_in_currency_unit">Balance in %1$s</string>
    <string name="balance_value">%1$s</string>
    <string name="deposit">Deposit</string>
    <string name="deposit_button">Deposit Btn</string>
    <string name="send_button">Send Btn</string>
    <string name="send">Send</string>
    <string name="receive_button">Receive Btn</string>
    <string name="receive">Receive</string>
    <string name="buy">Buy</string>
    <string name="buy_button">Buy Btn</string>
    <string name="floating_action_button">Floating Action Btn</string>
    <string name="home_button">Home Btn</string>
    <string name="home">Home</string>
    <string name="profile_button">Profile Btn</string>
    <string name="profile">Profile</string>
    <string name="settings_button">Settings Btn</string>
    <string name="settings">Settings</string>
    <string name="wallet_button">Wallet Btn</string>
    <string name="wallet">Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="coin_name">Coin Name</string>
    <string name="test_date">Test Date</string>
    <string name="test_time">Test Time</string>
    <string name="test_status">Test Status</string>
    <string name="test_amount">$0</string>
    <string name="status">Status</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="trading">Trading</string>
    <string name="search">Search</string>
    <string name="coin_name_capital">COIN NAME</string>
    <string name="coin_code_capital">COIN CODE</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="news">News</string>
    <string name="news_button">News Btn</string>
    <string name="hot">Hot</string>
    <string name="market_cap">Market Cap</string>
    <string name="_24h_change">24h change</string>
    <string name="buying_capital">BUYING %1$s</string>
    <string name="selling_capital">SELLING %1$s</string>
    <string name="amount">Amount in %1$s</string>
    <string name="amount_enter_hint">Enter your preferred amount</string>
    <string name="pay_amount">Pay %1$s</string>
    <string name="get_amount">Get %1$s</string>
    <string name="pay">Pay</string>
    <string name="get">Get</string>
    <string name="user_crypto_wallets">%1$s\'s \n  CRYPTOs WALLET</string>
    <string name="insufficient_balance">Insufficient account balance</string>
    <string name="insufficient_coin_balance">Insufficient %1$s balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">%1$s</string>
    <string name="notifications">Notifications</string>
    <string name="currency_unit">Currency unit</string>
    <string name="currency_next_button">Currency Next Btn</string>
    <string name="currency_unit_value">%1$s</string>
    <string name="about_us">About us</string>
    <string name="faq">FAQ</string>
    <string name="faq_button">FAQ Btn</string>
    <string name="about_us_btn">About us btn</string>
    <string name="choose_avatar_instruction">Choose your favorite avatar</string>
    <string name="avatar_1">Avatar 1</string>
    <string name="avatar_2">Avatar 2</string>
    <string name="avatar_3">Avatar 3</string>
    <string name="avatar_4">Avatar 4</string>
    <string name="avatar_5">Avatar 5</string>
    <string name="avatar_6">Avatar 6</string>
    <string name="avatar_7">Avatar 7</string>
    <string name="avatar_8">Avatar 8</string>
    <string name="avatar_9">Avatar 9</string>
    <string name="save">Save</string>
    <string name="avatar_background_1">Avatar Background 1</string>
    <string name="choose_currency_unit_instruction">Choose the displayed currency unit</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="aud">AUD</string>
    <string name="vnd">VND</string>
    <string name="news_tag">News Tag</string>
    <string name="title">Title</string>
    <string name="news_capital">NEWS</string>
    <string name="news_datetime_and_author">%1$s</string>
    <string name="return_content_desc">Return</string>
    <string name="content">Content</string>
    <string name="news_content">%1$s</string>
    <string name="author">Author</string>
    <string name="follow">Follow</string>
    <string name="enter_amount_instruction">Enter the amount here:</string>
    <string name="enter_amount_hint">Enter your amount in %1$s</string>
    <string name="deposit_capital">DEPOSIT</string>
    <string name="enter_card_instruction">Enter your credit/debit card:</string>
    <string name="enter_card_number_hint">Card number</string>
    <string name="enter_expiry_date_hint">Expiry date</string>
    <string name="enter_security_code_hint">CVC/CVV</string>
    <string name="enter_card_name_hint">Name on card</string>
    <string name="save_card">Save the card as preferences</string>
    <string name="add_button">Add Btn</string>
</resources>