<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_4"
    tools:context=".activities.LoginActivity" >

    <ImageButton
        android:id="@+id/return_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_arrow_back_dark_green"
        android:contentDescription="@string/return_content_desc"
        tools:ignore="ImageContrastCheck"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/trading_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/buying_capital"
        android:textColor="@color/violet"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/return_btn" />

    <LinearLayout
        android:id="@+id/amount_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintWidth_percent="0.90"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trading_title" >

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/amount"
            android:textColor="@color/violet_blue"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/amount_edit_text"
            style="@style/edit_text_theme_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/app_name"
            android:hint="@string/amount_enter_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/amount_warning_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/insufficient_balance"
        android:visibility="invisible"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_section"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/submitting_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:minWidth="200dp"
        android:background="@drawable/custom_rectangle_background_6"
        android:text="@string/pay"
        android:textColor="@color/violet_blue"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_section"/>

</androidx.constraintlayout.widget.ConstraintLayout>