<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_1"
    tools:context=".activities.LoginActivity" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/login_capital"
        android:textColor="@color/orange"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/username_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintWidth_percent="0.90"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/email"
            android:textColor="@color/pink_white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_enter_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/app_name"
            style="@style/edit_text_theme_1"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintWidth_percent="0.90"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_section" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/password"
            android:textColor="@color/pink_white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_enter_hint"
            android:autofillHints="@string/app_name"
            android:inputType="textPassword"
            style="@style/edit_text_theme_1"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textColor="@color/violet_white"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_section" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_rectangle_background_1"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_text_view"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/signup_recommendation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/signup_recommendation"
        android:textColor="@color/violet_white"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>