<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    tools:context=".activities.DetailedNewsActivity">

    <ImageButton
        android:id="@+id/return_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:src="@drawable/ic_arrow_back_gray"
        android:contentDescription="@string/return_content_desc"
        tools:ignore="ImageContrastCheck"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/news_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:text="@string/author"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/return_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/follow"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:background="@drawable/custom_rectangle_background_5"
        app:layout_constraintTop_toBottomOf="@id/return_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/news_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:text="@string/test_date"
        android:textStyle="normal"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/news_author"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/news_datetime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/news_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/content"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/news_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>